--- a/build.gradle
+++ b/build.gradle
@@ -43,16 +43,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	runtimeOnly 'com.h2database:h2'
 //	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	// junit 4
-	testImplementation("org.junit.vintage:junit-vintage-engine") {
-		exclude group: "org.hamcrest", module: "hamcrest-core"
-	}
+	// junit 5 변경
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-jpa'
