--- a/build.gradle
+++ b/build.gradle
@@ -37,20 +37,23 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	runtimeOnly 'com.h2database:h2'
-//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	// junit 5 변경
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-jpa'
