--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
 
+  profiles:
+    include:
+      - secret
   jpa:
     hibernate:
       ddl-auto: update
