--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,8 @@
-spring: # test db 연동 x
+spring:
+  profiles:
+    include:
+      - secret
+# test db 연동 x
 #  datasource:
 #    url:  jdbc:mariadb://localhost:3306/techmate?characterEncoding=UTF-8&serverTimezone=UTC
 #    username: cobi
@@ -14,7 +18,6 @@ spring: # test db 연동 x
 #        default_batch_fetch_size: 1000 #
 ##        show_sql: true #show sql
 ##    open-in-view: false osiv 끄기
-
 #server:
 #  port: 8083
 
