--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,25 +1,23 @@
 spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/techmate_testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
   profiles:
     include:
       - secret
-# test db 연동 x
-#  datasource:
-#    url:  jdbc:mariadb://localhost:3306/techmate?characterEncoding=UTF-8&serverTimezone=UTC
-#    username: cobi
-#    password: 1234
-#    driver-class-name: org.mariadb.jdbc.Driver
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    properties:
-#      hibernate:
-#        format_sql: true #To beautify or pretty print the SQL
-#        default_batch_fetch_size: 1000 #
-##        show_sql: true #show sql
-##    open-in-view: false osiv 끄기
-#server:
-#  port: 8083
+
+  jpa:
+    hibernate:
+      ddl-auto: create-drop # (create) 옵션은 애플리케이션 실행 시점에 테이블을 drop 하고, 다시 생성한다 <> none -> 다시생성 x
+    properties:
+      hibernate:
+#        show_sql: true
+        format_sql: true
+#        default_batch_fetch_size: 100 #
+#    open-in-view: false osiv 끄기
 
 logging.level:
   org.hibernate.SQL: debug
